css/style.css
:root {
  --primary-color: #BB3E00;
  --secondary-color: #F7AD45;
  --background-color: #FFF1D7;
  --text-color: #FFFF;
  --shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
  --header-height: 5rem;
  --primary-gradient: linear-gradient(239deg, rgba(255,128,65,1) 0%, rgba(187,62,0,1) 100%);
  --secondary-gradient: linear-gradient(239deg, rgba(255,186,87,1) 0%, rgba(247,173,69,1) 100%);
  --background-gradient: linear-gradient(239deg, rgba(255,221,157,1) 0%, rgba(255,241,215,1) 100%);
  --header-font: 'Bosa Nova';
  --text-font: 'Montserrat';
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 21px;
}

body{
  background: var(--background-color);
  background: linear-gradient(90deg, rgba(52,145,42,1) 0%, rgba(52,145,42,1) 33.29%, rgba(249,251,247,1) 33.3%, rgba(249,251,247,1) 66.5%, rgba(180,6,20,1) 66.6%, rgba(180,6,20,1) 100%);
  color: var(--text-color);
  margin: 0;
  padding: 0;
  min-height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

main {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: 5% 10% 0 10%;
  min-height: 100vh;
}

header {
    background: var(--primary-gradient);
    color: --text-color;
    position: fixed;
    width: 100%;
    height: var(--header-height);
    top: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 1000;
    box-shadow: var(--shadow);
    font-family: var(--header-font);
}

header img {
  width: 3rem;
  height: 3rem;
}

nav ul{
    list-style-type: none;
    display: inline-flex;
}

nav a {
    padding: 0 1rem; /* Add padding to the left and right of each link */
    text-decoration: none;
    color: var(--text-color); /* Set the text color to a dark grey */
}

nav a:hover {
    color: var(--secondary-color);
    text-decoration: underline;
}
nav .active {
    color: var(--secondary-color);
    text-decoration: underline;
}

.logo {
    display: flex;
    align-items: center;
    margin-left: 10%;
}
.user-info {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-right: 10%;
    padding: 0.5%;
    background: var(--secondary-gradient);
    border-radius: 2.5%;
    border: black 2px solid;
    box-shadow: var(--shadow);
    font-family: var(--text-font);
    position: relative;
}
.user-info:hover {
    cursor: pointer;
    color: var(--primary-color);

}
.user-info img {
    width: 2rem;
    height: 2rem;
    border-radius: 50%;
    margin-right: 0.5rem;
    border: 2px solid black;
}
.user-info span {
    font-size: 1rem;
    margin-right: 0.5rem;
}

#dropdown-menu {
  position: absolute;
  top: 100%;
  left: 0;
  display: none;
  background: var(--secondary-gradient);
  width: 100%;
  border-radius: 2.5%;
  border: black 2px solid;
  box-shadow: var(--shadow);
  font-family: var(--text-font);
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

#dropdown-menu ul {
  list-style-type: none;
}

#home-page {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

#menu-page {
  width: 100%;
  margin : 10% 0 10% 0;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background: transparent;
  padding: 5%;
  box-shadow: var(--shadow);
}

#menu-page h2 {
  font-family: var(--header-font);
  font-size: 1.5rem;
  margin-bottom: 2%;
  text-shadow: 2px 2px 4px black;
}

#pizza-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 5%;
  width: 100%;
  justify-items: center;
}

#pizza-grid img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

#pizza-grid a {
  text-decoration: none;
  width: 100%;
  min-height: 100%;
  color: var(--text-color);
  background-color: #BB3E00;
  margin: 2%;
  padding: 5%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  overflow: hidden;
}

.pizza-info {
  display: flex;
  width: 100%;
  height: 100%;
  background: var(--secondary-gradient);
  color: var(--text-color);
  padding: 5%;
  box-shadow: var(--shadow);
  z-index: 1000;
  flex-direction: column;

}

#pizza-page{
  width: 100%;
  display: none;
  align-items: center;
  flex-direction: column;
}

.slider {
    width: 60%;
    aspect-ratio: 16/9;
    overflow: hidden;
    position: relative;
    background: var(--secondary-gradient);
    box-shadow: var(--shadow);
    margin-top: 5%;
    border: 3px solid var(--secondary-color);
}

.sliderFade {
  display: none;
}
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}
.slideNumber {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}
.dot.active, .dot:hover {
  background-color: #717171;
}
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

.create {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 70%;
    background-color: var(--secondary-color);
    margin-top: 2%;
    padding: 2%;
    box-shadow: var(--shadow);
    font-family: var(--text-font);
}

footer {
  width: 100%;
  height: 5rem;
  background: var(--primary-gradient);
  font-family: var(--text-font);
  padding: 0.5rem 1rem;
  display: none;
}

